@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-23T16:20:51Z",
+  "timestamp" : "2022-07-24T08:19:00Z",
   "count_outdated" : 375,
   "uniques_outdated" : 236,
   "count" : 402,
-  "uniques" : 252,
+  "uniques" : 253,
   "clones" : [
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
@@ -79,6 +79,13 @@
       "timestamp": "2022-07-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
