@@ -1,3 +1,10 @@
+2022-07-24T08:19:00Z:
+* notice: last 14d: unq all: 6 27
+* notice: prev accum: outdated-unq outdated-all / unq all: 236 375 / 252 402
+* notice: next accum: outdated-unq outdated-all / unq all: 236 375 / 253 402
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-10 2022-07-24]
+
 2022-07-23T16:20:51Z:
 * notice: last 14d: unq all: 6 27
 * notice: prev accum: outdated-unq outdated-all / unq all: 235 373 / 252 400
